--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@ts-stack/markdown": "^1.5.0",
 		"sass": "^1.69.4",
 		"scss": "^0.2.4",
 		"typicons.font": "^2.1.2"
