--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@
 version: "3"
 services:
   website:
-    image: nbr140416/lou-taylor-music:latest  
+    image: nbr140416/lou-taylor-music:v1.1
     ports:
       - "80:80"
